<resources>
    <string name="app_name">TxRxDemoappAndroid</string>

    <!-- All Activities -->
    <!-- menu -->
    <string name="menu_refresh">Refresh</string>
    <!-- Preferences -->
    <string name="prefs_name">DemoAppPreferences</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">@string/menu_settings</string>

    <string name="connect_timeout_text">Connect Timeout (ms)</string>
    <string name="write_timeout_text">Write Timeout (ms)</string>
    <string name="first_read_timeout_text">First Read/Notify Timeout (ms)</string>
    <string name="later_read_timeout_text">Later Read/Notify Timeout (ms)</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="timeouts_heading">Timeouts</string>

    <!-- Scan Activity -->
    <string name="title_activity_main">Find BLE device</string>

    <!-- menu scan -->
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_settings">Settings</string>

    <!-- BleDeviceLisAdapter -->
    <string name="unknown_device">Unknown device</string>

    <!-- DeviceActivity -->
    <!-- menu device -->
    <string name="menu_stream_mode">Stream</string>
    <string name="menu_cmd_mode">Cmd</string>

    <string name="menu_connect">Connect</string>
    <string name="menu_connecting">Connecting</string>
    <string name="menu_discovering">Discovering</string>
    <string name="menu_disconnect">Disconnect</string>

    <string name="write_button_text">Write</string>

    <string name="repeat_write_button_text">Repeat</string>

    <string name="set_mode_request">Request change mode to: %1$s</string>
    <string name="set_mode_response">Current mode: %1$s</string>
</resources>